--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,3 +1,17 @@
 ion-content ion-toolbar {
   --background: translucent;
+  
 }
+
+p {
+  color: rgb(11, 168, 32);
+}
+
+.text {
+  color: rgb(11, 168, 32);
+}
+
+.text1 {
+  color: #5260ff;
+}
+
