--- a/src/global.scss
+++ b/src/global.scss
@@ -25,12 +25,18 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+ion-content {
+  --background: url(https://66.media.tumblr.com/9650c87ad9c546f94a7fbf6268513370/tumblr_oudn43IQWV1ws4s25o2_250.jpg) no-repeat center/cover fixed;
+  
+}
+
 @media (prefers-color-scheme: dark) {
   /*
    * Dark Colors
    * -------------------------------------------
    */
   
+   
   body {
     --ion-color-primary: #428cff;
     --ion-color-primary-rgb: 66,140,255;
@@ -176,3 +182,4 @@
     --color: white;
   }
 }
+
