--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -2,7 +2,11 @@ ion-content ion-toolbar {
   --background: translucent;
 }
 
-
+ion-icon{
+  font-size: 20px;
+  margin-right: 7px;
+  color: #154f85;
+}
   ion-card {
     position: relative;
     text-align: center;
