--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -25,7 +25,7 @@
 
 </ion-content>
 
-<ion-content class="card-background-page">
+<!-- <ion-content class="card-background-page">
 
   <ion-card>
     <img
@@ -91,4 +91,4 @@
     </ion-card-content>
   </ion-card>
 
-</ion-content>
+</ion-content> -->
