--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -29,6 +29,7 @@
         <ion-label position="stacked">To:</ion-label>
         <ion-select [(ngModel)]="post.to">
           <ion-select-option value="Everyone">Everyone</ion-select-option>
+        <ion-select-option *ngFor="let friend of myFriends" [value]="friend.name">{{friend.name}}</ion-select-option>
         </ion-select>
       </ion-item>
 
