--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar color="danger">
+    <ion-avatar class="ion-margin-start">
+      <img src="https://pbs.twimg.com/profile_images/968959598181961728/KWj2QsDB_400x400.jpg">
+    </ion-avatar>
     <ion-title>
       Post A New Message
     </ion-title>
@@ -14,10 +17,7 @@
       <ion-item>
         <ion-label position="stacked">Your Message</ion-label>
         <ion-input [(ngModel)]="post.text"></ion-input>
-        <ion-tab-button (click)="sendMessage()">
-          <ion-icon name="arrow-up-circle-outline" color="primary"></ion-icon>
-          <ion-label>Send</ion-label>
-        </ion-tab-button>
+        
       </ion-item>
 
       <ion-item>
@@ -28,10 +28,16 @@
       <ion-item>
         <ion-label position="stacked">To:</ion-label>
         <ion-select [(ngModel)]="post.to">
-          <ion-select-option value="Everyone">Everyone</ion-select-option>
+          <ion-select-option class="friend" value="Everyone">Everyone</ion-select-option>
         <ion-select-option *ngFor="let friend of myFriends" [value]="friend.name">{{friend.name}}</ion-select-option>
         </ion-select>
       </ion-item>
+
+      <br>
+
+      <ion-button (click)="sendMessage()" color="danger">Send
+
+      </ion-button>
 
      
 
