--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -27,3 +27,11 @@ ion-icon{
     width: 100%;
     color: #000;
   }
+
+ ion-button{
+   float: right;
+ }
+
+ .friends{
+   text-align: center;
+ }
