--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,5 +1,8 @@
-<ion-header translucent>
+<ion-header>
   <ion-toolbar color="danger">
+    <ion-avatar class="ion-margin-start">
+      <img src="https://pbs.twimg.com/profile_images/968959598181961728/KWj2QsDB_400x400.jpg">
+    </ion-avatar>
     <ion-title>Feed</ion-title>
     <ion-buttons slot="primary">
       <ion-icon name="funnel-outline"></ion-icon>
