--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -12,13 +12,12 @@ p {
 }
 
 .text1 {
-  color: #5260ff;
+  color: #061afd;
 }
 
 ion-card-title {
   font-size: 14px;
-  color: #1d5d7a;
-  
+  color: #1d5d7a;  
 }
 
 ion-card-subtitle {
@@ -33,11 +32,11 @@ ion-card-header {
 }
 
 ion-card-content {
-  border-bottom: 1px solid #9e3414b9;
+  border-bottom: 1px solid #cc1a14b9;
 }
 
 .my-message {
-  background-color: #2b6bca8e;
+  background-color: #ca302b8e;
 
     ion-card-header,
     ion-card-content {
